# PrimeCodex

./: .copilot  .env.template  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT_AGENT.md  COPILOT_AGENT_ONBOARDING.md  LICENSE  POST_PURGE_CHECKLIST.md  README.md  SECURITY.md  cli.py  emota_unity.py  examples.py  genesis_prime.py  openai_connect.py  prime_cli.py  primecodex_cli.py  pyproject.toml  pyrightconfig.json  quickstart.py  requirements.txt  test_archetype_coherence.py  test_emota_unity.py  test_memory_persistence.py  test_openai_connect.py
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_task.md  bug_report.md  bug_report.yml  copilot_task.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
emota/: __init__.py  archetype.py  braid.py  bridge.py  cathedral.py  config.local.yaml  identity.py  logging_utils.py  memory.py  meta.py  symbolic.py  unity.py
schema/: cli_output.schema.json
scripts/: cleanup_secrets.sh  mirror_history_purge.sh  setup_dev.sh
state/: memory.json
tests/: test_archetype_coherence.py  test_bridge.py  test_cathedral.py  test_cli_schema.py  test_emota_unity.py  test_identity.py  test_meta.py  test_openai_connect.py  test_symbolic.py
