[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "primecodex"
version = "0.1.0"
description = "PrimeCodex EMOTA Unity experimental framework"
readme = "README.md"
requires-python = ">=3.10"
license = "Proprietary"
authors = [{ name = "Genesis Prime" }]
dependencies = [
  "openai>=1.0.0,<2.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "jsonschema>=4.0.0,<5.0.0"
]

[project.optional-dependencies]
logging = ["python-json-logger>=2.0.0,<3.0.0"]
dev = [
  "pytest>=8.0.0,<9.0.0"
]

[project.scripts]
primecodex = "cli:main"

[tool.setuptools.packages.find]
include = ["emota*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
